@@ -4,6 +4,7 @@
  411446 Use `Message-ID' rather than `Message-Id' when posting. (Charles)
  411447 Header pane loses selection when deleting articles (Jeff Berman)
  411657 Post window's cursor appears in the wrong place (Frank Tabor)
+ 411659 saving a second draft confuses the post window's file dialog (Charles)
 
 0.125 "Potzrebie"
  408767 connection-limit change not recognized until restart (Chuck)
